# open-trajectory-gym

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yaml  env.example  pyproject.toml
configs/challenges/: cybench.yaml  cybench_target_map_eval.json  cybench_target_map_runpod.json  eval_default.yaml
configs/synthetic_data_generation/: README.md  default.yaml  incident_response_k8s.yaml  pentest_lateral_movement.yaml  threat_emulation_apt.yaml
data/: README.md  online_rl.jsonl.manifest.json  online_rl_quality.jsonl  online_rl_quality.jsonl.manifest.json
docker/: Dockerfile
docker/patches/: apply_all_patches.sh  patch_flash_attn_stub.py  patch_ray_collective_compat.py  patch_skyrl_batchencoding.py  patch_skyrl_bf16_policy_init.py  patch_skyrl_chat_template_kwargs.py  patch_skyrl_collect_lora_fsdp2.py  patch_skyrl_custom_template_tools.py  patch_skyrl_dataloader_noshuffle.py  patch_skyrl_empty_reward_fallback.py  patch_skyrl_filter_stepwise.py  patch_skyrl_fsdp_mixed_precision.py  patch_skyrl_fsdp_sharded_sd.py  patch_skyrl_loss_diagnostics.py  patch_skyrl_prompt_length_guard.py  patch_skyrl_stepwise_index_guard.py  patch_skyrl_stepwise_truncation.py  patch_skyrl_version_comparison.py  patch_skyrl_weight_sync.py  patch_vllm_compat_shims.py  patch_vllm_memory_assert.py  patch_vllm_serving_api.py
docs/: architecture.md  byo_agent.md  byo_benchmark.md  data-collection.md  quickstart.md  training.md
examples/: README.md  byo_runtime_example.py
examples/bring-your-own/: README.md
examples/bring-your-own/agent/: README.md  boxpwnr_adapter.py  langgraph_adapter.py  langgraph_stub_adapter.py  template_adapter.py
examples/bring-your-own/benchmark/: README.md  challenge_template.yaml
examples/bring-your-own/model/: README.md  training_template.yaml
examples/devstral-24b/: README.md  training.yaml
examples/gepa/: README.md  challenge.jsonl  challenge_hard.jsonl  challenge_labyrinth.jsonl  run.py  run.sh
examples/qwen35-27b/: README.md  eval.yaml  training.yaml  training_smoke.yaml  training_smoke_flagcmd.yaml
examples/qwen35-4b/: README.md  training.yaml  training_smoke.yaml
examples/qwen35-9b/: README.md  training.yaml  training_smoke.yaml
examples/smoke-test/: README.md  smoke_test.sh
scripts/: run_sft_and_eval.sh  test_synth_model.py
scripts/deploy/: deploy.sh  online_rl_readiness_audit.py
src/trajgym/: __init__.py
src/trajgym/agent/: __init__.py  default_agent.py  framework_runtime_bridge.py  protocol.py  rollout_status.py  step_helpers.py  wire_protocol.py
src/trajgym/challenges/: __init__.py  manager.py  preflight.py  registry.py
src/trajgym/cli/: __init__.py  challenges.py  convert_traces.py  evaluate.py  export_gguf.py  generate_online_rl.py  generate_target_map.py  run_agent.py  split_dataset.py  synthetic_data_generation.py  train.py  trajectories.py  validate_pipeline.py
src/trajgym/data/: __init__.py  converter.py  preprocessor.py  splitter.py
src/trajgym/envs/: __init__.py  tool_executor.py
src/trajgym/envs/skyrl/: trajgym_env.py
src/trajgym/eval/: __init__.py  evaluator.py
src/trajgym/formatters/: __init__.py  base.py  devstral.py  glm4.py  qwen3.py  tool_registry.py
src/trajgym/integrations/: __init__.py  boxpwnr_adapter.py  boxpwnr_runner.py
src/trajgym/parsing/: __init__.py  tool_calls.py
src/trajgym/prompts/: __init__.py  composer.py
src/trajgym/prompts/templates/: system.txt  user.txt
src/trajgym/rewards/: __init__.py  constants.py  reward.py  signals.py
src/trajgym/synthetic_data_generation/: __init__.py  executor.py  generator.py  manifest.py
src/trajgym/training/: __init__.py  gepa.py  skyrl_vllm_server.py  tool_wrappers.py
src/trajgym/training/grpo_templates/: README.md  devstral_24b.yaml  gptoss_20b.yaml  nanbeige_3b.yaml  qwen35_27b.yaml  qwen3_8b.yaml
src/trajgym/training/online_rl/: __init__.py  _utils.py  config_builder.py  data_converter.py  runtime.py  step_reward.py  trajectory_logger.py
tests/: conftest.py  test_agent_protocol.py  test_boxpwnr_native_runtime_adapter.py  test_byo_runtime_step_agent.py  test_challenge_manager.py  test_challenge_preflight.py  test_challenge_registry.py  test_cli.py  test_cli_evaluate.py  test_cli_train.py  test_compliance_fixes.py  test_configs.py  test_converter.py  test_formatters.py  test_framework_runtime_adapters.py  test_framework_runtime_bridge.py  test_generate_online_rl_manifest.py  test_gepa.py  test_grpo.py  test_native_tool_schemas.py  test_online_rl.py  test_openctf_env.py  test_preprocess_sft.py  test_prompt_templates.py  test_resilient_step_agent.py  test_reward.py  test_reward_hacking.py  test_reward_integration.py  test_reward_real_data.py  test_reward_wiring.py  test_rollout_status.py  test_runner_resolver.py  test_runtime_bridge_defaults.py  test_runtime_protocol.py  test_splitter.py  test_step_agent.py  test_think_stripping.py  test_tokenizer_drift.py  test_tool_executor.py  test_tool_groups.py  (+4 more)
(+9 files in other folders)
